<resources>
    <string name="app_name">Project01</string>
    <!--App 登录注册相关文字信息-->
    <string name="remberPwd">记住密码</string>
    <string name="forgetpassword">忘记密码</string>
    <string name="inputPwdHint">请设置6-16位密码</string>
    <string name="inputPwdHint2">请再次输入6-16位密码</string>
    <string name="tip_gotoregist">我还不是会员?</string>
    <string name="gotoregist">新用户注册\t</string>
    <string name="loginText">登录</string>
    <string name="readAgreement">注册表示您同意找宝《使用协议》</string>
    <string name="getCaptcha">获取验证码</string>
    <string name="justRegister">注册</string>
    <string name="tip_hasAccount">已有账号?</string>
    <string name="hasAccountHint">直接登录</string>
    <string name="inputCaptchaHint">请输入验证码</string>
    <string name="foundpwd_next">完成填写,下一步</string>
    <string name="inputPhoneHint">请输入手机号码</string>
    <string name="toast_empty_phone">手机号不能为空</string>
    <string name="toast_captcha_empty">验证码不能为空</string>
    <string name="toast_captcha_err">验证码错误</string>
    <string name="toast_empty_pwd">密码不能为空!</string>
    <string name="getcaptcha">获取验证码</string>
    <string name="OK_modify">确认修改</string>
    <string name="title_activity_test_utils">TestUtilsActivity</string>
    <string name="login_copyright">主办单位：新华网 儿童虹膜防丢公益信息平台\n协办单位：找宝科技(上海)有限公司</string>
    <string name="title_activity_test_ruler">TestRulerActivity</string>
    <string name="copyright_1">找宝科技 版权所有</string>
    <string name="copyright_2">Copyright ©2016 zhaobao</string>
</resources>
