<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" >

    <!--<include-->
    <!--android:value="@+value/titlebar"-->
    <!--layout="@layout/lay_titlebar" />-->
    <com.wq.common.widget.TitleBar
        style="@style/BackTitleBarStyle"
        app:title="忘记密码"
        android:id="@+id/titlebar"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:layout_below="@+id/titlebar"
        android:src="@mipmap/bg_home_touying" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titlebar"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <!-- <include layout="@layout/lay_login_top" /> -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:background="@color/white"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/view_gap_4"
                android:paddingLeft="@dimen/view_gap"
                android:paddingRight="@dimen/view_gap_4"
                android:paddingTop="@dimen/view_gap_4" >

                <ImageView
                    android:id="@+id/icon1"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:visibility="gone"
                    />

                <View
                    android:layout_width="1px"
                    android:layout_height="20dp"
                    android:layout_marginLeft="@dimen/view_gap2"
                    android:layout_marginRight="@dimen/view_gap2"
                    android:visibility="gone"
                    android:background="@color/limit_line1" />

                <EditText
                    android:id="@+id/account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:inputType="phone"
                    android:digits="0123456789abcdefghijklmnopqrstuvwxyz@."
                    android:textColor="@color/text3"
                    android:textSize="15sp"
                    android:singleLine="true"
                    android:hint="请输入手机号" />


            </LinearLayout>

            <!-- <View style="@style/login_lineStyle" /> -->
            <View
                style="@style/limit_line"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/view_gap" >

                <ImageView
                    android:id="@+id/icon2"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:visibility="gone"
                    />

                <View
                    android:layout_width="1px"
                    android:layout_height="20dp"
                    android:visibility="gone"
                    android:layout_marginLeft="@dimen/view_gap2"
                    android:layout_marginRight="@dimen/view_gap2"
                    android:background="@color/limit_line1" />

                <EditText
                    android:id="@+id/captcha"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:textColor="@color/text3"
                    android:textSize="15sp"
                    android:inputType="number"
                    android:hint="请输入验证码"
                    android:singleLine="true"
                    />
                <TextView
                    android:id="@+id/getCaptcha"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@drawable/captcha_btn_login"
                    android:gravity="center"
                    android:paddingLeft="@dimen/view_gap"
                    android:paddingRight="@dimen/view_gap"
                    android:text="@string/getCaptcha"
                    android:textColor="@color/white" />
                <ImageView
                    android:id="@+id/showPwd"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:visibility="gone" />
            </LinearLayout>

            <!-- <View style="@style/login_lineStyle" /> -->
            <View
                style="@style/limit_line"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/view_gap" >

                <ImageView
                    android:id="@+id/icon3"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:visibility="gone"
                    />

                <View
                    android:layout_width="1px"
                    android:layout_height="20dp"
                    android:layout_marginLeft="@dimen/view_gap2"
                    android:visibility="gone"
                    android:layout_marginRight="@dimen/view_gap2"

                    android:background="@color/limit_line1" />

                <EditText
                    android:id="@+id/pwd"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:password="true"
                    android:textColor="@color/text3"
                    android:textSize="15sp"
                    android:hint="@string/inputPwdHint"
                    android:singleLine="true"
                    android:maxLength="11" />
            </LinearLayout>
            <View
                style="@style/limit_line"
                android:visibility="gone"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />
            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/view_gap" >

                <ImageView
                    android:id="@+id/icon4"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:visibility="gone"
                    />

                <View
                    android:layout_width="1px"
                    android:layout_height="20dp"
                    android:layout_marginLeft="@dimen/view_gap2"
                    android:layout_marginRight="@dimen/view_gap2"
                    android:visibility="gone"
                    android:background="@color/limit_line1" />

                <EditText
                    android:id="@+id/pwd2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:password="true"
                    android:hint="确认密码"
                    android:textColor="@color/text3"
                    android:textSize="15sp"
                    android:singleLine="true"
                    android:maxLength="11" />
            </LinearLayout>
            <!-- <View style="@style/login_lineStyle" /> -->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/view_gap2"
            android:layout_marginRight="@dimen/view_gap2"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"

            android:visibility="gone" >

            <!-- android:paddingLeft="8dp" -->

            <CheckBox
                android:id="@+id/readAgreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_style"
                android:drawablePadding="8dp"
                android:padding="0dp"
                android:checked="true"
                android:textColor="@color/text4" />

            <TextView
                android:layout_marginLeft="@dimen/view_gap"
                android:id="@+id/agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text3"
                android:text="@string/readAgreement" />
        </LinearLayout>

        <Button
            style="@style/submitBtn"
            android:id="@+id/submit"
            android:layout_marginLeft="@dimen/view_gap2"
            android:layout_marginRight="@dimen/view_gap2"
            android:layout_marginTop="15dp"
            android:text="提交"
            />

        <LinearLayout
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <!--<TextView-->
            <!--style="@style/textStyle4"-->
            <!--android:gravity="center"-->
            <!--android:textSize="16sp"-->
            <!--android:text="@string/tip_hasAccount" />-->

            <TextView
                android:id="@+id/forgetpassword"
                style="@style/textStyle3"
                android:gravity="center"
                android:text="忘记密码"
                android:visibility="gone"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>